resolve conflict
Signed-off-by: packy92 <wangchao@starrocks.com>